--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">AndroidStudy</string>
+
+    <string name="permission_get_accounts_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_GET_ACCOUNTS</string>
+    <string name="permission_read_phone_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_READ_PHONE_STATE</string>
+    <string name="permission_call_phone_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_CALL_PHONE</string>
+    <string name="permission_camera_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_CAMERA</string>
+    <string name="permission_access_fine_location_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_ACCESS_FINE_LOCATION</string>
+    <string name="permission_access_coarse_location_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_ACCESS_COARSE_LOCATION</string>
+    <string name="permission_read_external_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_READ_EXTERNAL_STORAGE</string>
+    <string name="permission_white_external_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_WRITE_EXTERNAL_STORAGE</string>
+    <string name="permission_recode_audio_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_RECORD_AUDIO</string>
 </resources>
